Fix CSP violation and QR code generation in browser extension
- Fix Content Security Policy violation by replacing external QR code CDN with local library
- Download qrcode-generator@1.4.4 library to local assets directory
- Update popup.html to reference local QR code library instead of unpkg.com
- Add qrcode.min.js to manifest.json web_accessible_resources
- Implement proper QR code generation using actual QR library instead of fake patterns
- Add real QR code generation with proper data encoding and SVG rendering
- Enhance error handling and debugging for QR code generation process
- Add fallback mechanism when QR library is not available
- Improve QR code data validation and preview logging

This resolves the 'Failed to load script' CSP errors and enables proper QR code generation
for MPC group creation and joining functionality.

--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "test:all": "npm run test:sdk",
     "clean": "rm -rf packages/*/dist packages/*/build packages/*/node_modules",
     "setup": "npm install && npm run build:core && npm run build:wasm && npm run build:sdk",
-    "install-all": "npm install && npm install --workspaces",
-    "postinstall": "npm run install-all"
+    "install-all": "npm install && npm install --workspaces"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
