--- a/packages/extension/manifest.json
+++ b/packages/extension/manifest.json
@@ -35,7 +35,8 @@
   "web_accessible_resources": [{
     "resources": [
       "assets/sdk-bundle/*",
-      "assets/icons/*"
+      "assets/icons/*",
+      "assets/qrcode.min.js"
     ],
     "matches": ["<all_urls>"]
   }],
