--- a/packages/extension/manifest.json
+++ b/packages/extension/manifest.json
@@ -45,18 +45,18 @@
     "default_popup": "popup/popup.html",
     "default_title": "DeFiShArd",
     "default_icon": {
-      "16": "assets/icons/icon.svg",
-      "32": "assets/icons/icon.svg",
-      "48": "assets/icons/icon.svg",
-      "128": "assets/icons/icon.svg"
+      "16": "assets/icons/defishard-logo.svg",
+      "32": "assets/icons/defishard-logo.svg",
+      "48": "assets/icons/defishard-logo.svg",
+      "128": "assets/icons/defishard-logo.svg"
     }
   },
   
   "icons": {
-    "16": "assets/icons/icon.svg",
-    "32": "assets/icons/icon.svg",
-    "48": "assets/icons/icon.svg",
-    "128": "assets/icons/icon.svg"
+    "16": "assets/icons/defishard-logo.svg",
+    "32": "assets/icons/defishard-logo.svg",
+    "48": "assets/icons/defishard-logo.svg",
+    "128": "assets/icons/defishard-logo.svg"
   },
   
 
